# evcarproj

Ev_car_app/: .gitignore  README.md  pyproject.toml  setup.py
Ev_car_app/src/db/: ERdiagram.puml  db_init.py  init_db.py  models.py
Ev_car_app/tests/: test_main.py
manuel_calculation/: car.ods  charger.ods
