[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.20.0"
# Add your project dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"